* sound is no longer upside-down (test eg. with hrtf)
* got rid of BS. (gain is still the same everywhere)
* sound handles are now userdata => method syntax; ids are owned and garbage collected
* sounds are paused while in pause menu in singleplayer
* shader animation timer is also paused
* warning in errorstream for positional stereo sounds, and don't play (fixes #6622)
* don't spam logs with every file tried in sound-pack (fixes #10979)
* correct documentation of sound params
* enable fade in for positional sounds (fixes #6748)
* vorbis seek callback now supports SEEK_END (is *not* optional according to <https://www.xiph.org/vorbis/doc/vorbisfile/callbacks.html>)
* doppler effect (fixes #9172)
* client-side setting for doppler factor (because you can be very fast in minetest)
* footstep sounds of objects are played at feet


TODO:
* fix TODOs in client/sound.cpp, client/sound_openal.cpp
* remove benchmark code
* testing stuff in devtest
* test:
  * looped streamed sounds
  * time_offset
  * doppler (i.e. attached objs)
  * footstep pos
  * positional fade


not included in PR:
* No check for missing sounds #4955 <- could be easily changed, but bad change imo
* sound manager in separate thread for performance (but could be easily implemented)
* hrtf
* sound effects (e.g. #10873)
* starting and stopping sounds when players enter and leave max_hear_distance (#3559)
* Add Delay To SimpleSoundSpec #10306
* manipulate sound parameters for already playing sound handles #12510
* Get sound duration #12375
* Sound attached to objects do not disappear even when object is removed #11521
* Audio attached to object stops moving when object leaves #8094
* Incomplete Documentation of 'params' sound parameter table, used by minetest.sound_play() #11414
* CSM: playing sounds connected to entities is unimplemented #5389
* Add 'max hear distance' parameter for mob footstep sounds #4361
* more