@@ -660,23 +660,28 @@ v3s16 LocalPlayer::getStandingNodePos()
 	return m_standing_node;
 }
 
+v3f LocalPlayer::getFeetPos()
+{
+	return (1.0f/BS) * (getPosition() + v3f(0.0f, m_collisionbox.MinEdge.Y, 0.0f));
+}
+
 v3s16 LocalPlayer::getFootstepNodePos()
 {
-	v3f feet_pos = getPosition() + v3f(0.0f, m_collisionbox.MinEdge.Y, 0.0f);
+	v3f feet_pos = getFeetPos();
 
 	// Emit swimming sound if the player is in liquid
 	if (in_liquid_stable)
-		return floatToInt(feet_pos, BS);
+		return floatToInt(feet_pos, 1.0f);
 
 	// BS * 0.05 below the player's feet ensures a 1/16th height
 	// nodebox is detected instead of the node below it.
 	if (touching_ground)
-		return floatToInt(feet_pos - v3f(0.0f, BS * 0.05f, 0.0f), BS);
+		return floatToInt(feet_pos - v3f(0.0f, 0.05f, 0.0f), 1.0f);
 
 	// A larger distance below is necessary for a footstep sound
 	// when landing after a jump or fall. BS * 0.5 ensures water
 	// sounds when swimming in 1 node deep water.
-	return floatToInt(feet_pos - v3f(0.0f, BS * 0.5f, 0.0f), BS);
+	return floatToInt(feet_pos - v3f(0.0f, 0.5f, 0.0f), 1.0f);
 }
 
 v3s16 LocalPlayer::getLightPosition() const
